fix not center text on ios

--- a/store/css/store-detail/store-content.css
+++ b/store/css/store-detail/store-content.css
@@ -134,8 +134,9 @@
 }
 
 .store-type__icon {
-  max-width: 40px;
+  width: 40px;
   height: auto;
+  flex-shrink: 0;
 }
 .store-type__text {
   line-height: 2.2rem;
